--- a/SiteCore4/css/style.css
+++ b/SiteCore4/css/style.css
@@ -203,20 +203,19 @@ body {
 	right: 0;
 }
 
-.slider_window {
+.slider{
 	width: 80%;
 	margin: 0 auto;
-	height: 250px;
-	overflow: hidden;
-	border: 1px solid #4C4646;
+	*height: 250px;
+	*border: 1px solid #4C4646;
 	margin: 50px auto;
 }
+.slide {
 
-.skider_roll {
-
+height:250px;
 }
 
-.slider_control > div {
+.slider_control > a {
 	width: 21%;
 	height: 0%;
 	padding-bottom: 12%;
@@ -365,7 +364,7 @@ background: linear-gradient(to right,  rgba(215,132,77,1) 0%,rgba(125,185,232,0)
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7844d', endColorstr='#007db9e8',GradientType=1 );
 }
 
-.slide {
+.thumbnail {
 overflow: hidden;
 width: 218px;
 height: 180px;
@@ -375,7 +374,7 @@ background-color: #ffc;
 border: 1px solid #999;
 float:left;
 }
-.slide .inner {
+.thumbnail .description {
 width: 100%;
 height: 100%;
 padding:0;
@@ -403,7 +402,7 @@ position:relative;
 	border-right: 1px solid #4C4646;
 	border-bottom: 1px solid #4C4646;
 }
-.slide a {
+.thumbnail a {
 	background-size: contain !important;
 	float: left;
 	margin: 0 10px;
@@ -411,21 +410,21 @@ position:relative;
 	width: 40px;
 	height: 25px;
 }
-.inner h2 {
+.description h2 {
 	text-align: center;
 	font-size: 18px;
 	color: #4C4646;
 	font-family: 'barkentina';
 	margin-top: 30px;
 }
-.slide p {
+.thumbnail p {
 	text-align: center;
 	font-size: 15px;
 	color: #4C4646;
 	font-family: 'barkentina';
 	margin-top: 6px;
 }
-.slide > div > div {
+.thumbnail > div > div {
 	background-color:rgba(215, 132, 77, 0.6);
 	top:5px;
 	bottom:5px;
@@ -433,7 +432,7 @@ position:relative;
 	right:5px;
 	position:absolute;
 }
-.inner > div > div:nth-of-type(2) {
+.description > div > div:nth-of-type(2) {
 
 margin: 10px auto;
 width: 120px;
