Поставил на движок

--- a/www/templates/index.tpl.html
+++ b/www/templates/index.tpl.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>{PAGE_TITLE}</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/style1000.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.min.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.min.css">
+	<link rel="stylesheet" type="text/css" href="css/fonts/Barkentina/barkentina.css">
+	<link rel="stylesheet" type="text/css" href="css/slideInDown.css">
+	<link rel="stylesheet" type="text/css" href="css/slideInLeft.css">
+	<link rel="stylesheet" type="text/css" href="css/slideInRight.css">
+	<link rel="stylesheet" type="text/css" href="css/slideInUp.css">
+	<link rel="stylesheet" type="text/css" href="css/fadeIn.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
-
-<div class="container clear-fix">
-
+<div class="wrapper animated fadeIn">
 	<div class="header">
+		<a class="logo" href="/">SiteCore</a>
 		{MENU}
 	</div>
-	
-	{SLIDER}
-
-	<div class="hello">
-		{HELLO}
-	</div>
-
-
-	<div class="content-block clear-fix">
+	<div class="content">
 		{CONTENT}
 	</div>
-	
 </div>
-
-
-<div class="footer">
-	<div class="footer-midle">{COPYRIGHT}</div>
+<div class="footer animated fadeIn">
+	<div class="gear_footer"></div>
+	<a href="">Copyright © 2014 SiteCore.ru, All Rights Reserved</a>
 </div>
-
-
 	
 </body>
 </html>
