--- a/www/templates/index.tpl.html
+++ b/www/templates/index.tpl.html
@@ -13,7 +13,9 @@
 	<link rel="stylesheet" type="text/css" href="css/slideInRight.css">
 	<link rel="stylesheet" type="text/css" href="css/slideInUp.css">
 	<link rel="stylesheet" type="text/css" href="css/fadeIn.css">
+	<link rel="stylesheet" type="text/css" href="css/bxslider.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 </head>
 <body>
 
