удален лишний блок content

--- a/www/templates/index.tpl.html
+++ b/www/templates/index.tpl.html
@@ -32,7 +32,7 @@
 		<a class="logo" href="/">SiteCore</a>
 		{MENU}
 	</div>
-	<div class="content">
+	<div class="content clear-fix">
 		{CONTENT}
 	</div>
 </div>
