--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,7 +3,6 @@ html {
 }
 
 body {
-	 fill: currentColor;
 	height: 100%;
 	background: url(/img/hexellence.png) fixed !important;
 }
@@ -38,47 +37,47 @@ p, h2, h3 {
 }
 
 .cirkle {
-	color: blue;
-  fill: currentColor;
 	z-index: 2;
 	position: absolute;
 	margin: auto;
 	left: 0;
 	right: 0;
-	bottom: -25px;
+	bottom: -20px;
 	width: 102px;
 	height: 26px;
 	background: url(/img/hexellence.png) center center;
 }
 
-.active .cirkle {
-	color: #d7844d
+
+
+.cirkle svg {
+	fill: #d7844d;
 }
-.style0, .style0 {fill:black}
-#Flex path, #Flex  polygon {
-		fill: curentColor;
-		}
+
+.lower {
+	bottom: -26px;
+}
+
+.lower2 {
+	bottom: -25px;
+}
+
+.cirkle svg {
+	 fill: #4C4646;
+}
+
+.active .cirkle svg {
+  fill: #d7844d;
+}
+
+.style0 {fill: rgba(76, 70, 70, 0.72)}
+
 
 .cirkle > div {
 	margin-top: -5px;
 	width: 100%;
 	height: 48px;
 	background-size: contain !important;
-}
-
-.shop {
-	margin-top: -3px;
-	background: url(../img/Market.svg) no-repeat center center;
-}
-
-.visit {
-	margin-top: 1px !important;
-	background: url(../img/Visited-Site.svg) no-repeat center center;
-}
-
-.corp {
-	
-	background: url(../img/Corp_site.svg) no-repeat center center;
 }
 
 .clear-fix:after {
@@ -313,6 +312,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4646', end
 	float: left;
 	width: 100%;
 	margin-top: 20px;
+}
+
+.more_scroll:hover svg {
+	fill:#d7844d;
 }
 
 .more_scroll:before {
