--- a/www/css/style.css
+++ b/www/css/style.css
@@ -42,9 +42,9 @@ p, h2, h3 {
 	margin: auto;
 	left: 0;
 	right: 0;
-	bottom: -20px;
-	width: 102px;
-	height: 26px;
+	bottom: -45px;
+	width: 34.343434%;
+	height: 51px;
 	background: url(/img/hexellence.png) center center;
 }
 
@@ -55,11 +55,12 @@ p, h2, h3 {
 }
 
 .lower {
-	bottom: -26px;
+	bottom: -51px;
 }
 
 .lower2 {
-	bottom: -25px;
+	bottom: -50px;
+	width: 10%
 }
 
 .cirkle svg {
@@ -89,7 +90,7 @@ p, h2, h3 {
 
 .content {
 	position: relative;
-	padding-bottom: 100px;
+	margin-bottom: 145px;
 }
 
 .content h1 {
@@ -121,6 +122,11 @@ p, h2, h3 {
 	color: #4C4646;
 }
 
+.container {
+	width: 96%;
+	margin: 20px auto 0;
+}
+
 .description h2 {
 	text-align: center;
 	font-size: 18px;
@@ -143,9 +149,9 @@ p, h2, h3 {
 
 .footer {
 	clear: both;
-	height: 90px;
+	height: 70px;
 	width: 80%;
-	margin: -90px auto 0;
+	margin: -70px auto 0;
 }
 
 .footer a {
@@ -235,6 +241,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7844d', end
 }
 
 .logo {
+	min-width: 400px;
 	width: 40%;
 	display: block;
 	text-align: center;
@@ -247,6 +254,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d7844d', end
 }
 
 .logo:before {
+	min-width: 125px;
 	opacity: 0.7;
 	margin-top: 20px;
 	float: left;
@@ -266,6 +274,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#007db9e8', e
 }
 
 .logo:after {
+	min-width: 125px;
 	opacity: 0.7;
 	margin-top: 20px;
 	float: right;
@@ -285,6 +294,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4646', end
 }
 
 .logo:hover {
+
 	transition: all 0.3s ease 0;
 	color: black;
 	width: 60%;
@@ -293,16 +303,22 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4646', end
 .logo:hover:after {
 	transition: all 0.3s ease 0;
 	opacity: 1;
-	width: 39.4%;
+	width: 34%;
 }
 .logo:hover:before {
 	transition: all 0.3s ease 0;
 	opacity: 1;
-	width: 39.4%;
+	width: 34%;
 }
 
 .look {
 	background: url(/img/look.svg) no-repeat center center;
+}
+
+.middler {
+	 display: inline-block;
+  line-height: 1;
+  vertical-align: middle;
 }
 
 .more_scroll {
@@ -311,11 +327,15 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4646', end
 	height: 70px;
 	float: left;
 	width: 100%;
-	margin-top: 20px;
+	margin-top: 24px;
 }
 
 .more_scroll:active svg {
 	fill:#d7844d;
+}
+
+.more_scroll:active  h2 {
+	color: #d7844d;
 }
 
 .more_scroll:before {
@@ -365,7 +385,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004c4646', e
 .nav {
 	position: relative;
 	margin: 0 auto;
-	width: 600px;
+	width: 60.12024%;
 	border: 1px solid #d7844d;
 }
 
@@ -479,6 +499,25 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004c4646', e
 	right: 0;
 }
 
+.service_description {
+	
+}
+
+.service_description h2{
+	
+}
+
+.service_description p{
+	
+}
+
+.service_descript_icon {
+	width: 
+}
+
+.service_descript_icon:before
+
+.service_descript_icon:after
 .shadow {
 	width: 100% !important;
 	height: 100% !important;
@@ -492,7 +531,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004c4646', e
 .slider{
 	width: 100%;
 	margin: 0 auto;
-	margin: 50px auto;
+	margin: 50px auto 18px;
 }
 .slider_wrapper {
 	margin: 0 auto;
@@ -500,23 +539,28 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004c4646', e
 	height: 100%;
 }
 .slide {
-	height:300px;
+	line-height:250px;
 }
 
-.slide h3 {
+.slide > div  h3 {
 	color: #4B4040;
-	width: 80%;
+	width: 64%;
 	margin: 16px auto;
 	font-size: 17px;
 	text-align: center;
 }
 
-.slide p {
+.slide > div p {
 	color: #4C4646;
-	width: 90%;
+	width: 80%;
 	margin: 0 auto 16px;
 	font-size: 16px;
 	text-align: center;
+}
+
+.slider_control {
+	margin: 0 auto;
+	width: 96%;
 }
 
 .slider_control > a {
@@ -601,12 +645,16 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004c4646', e
 
 .thumbnail {
 overflow: hidden;
-width: 218px;
+width: 31.333333%;
 height: 180px;
-margin: 3% 3% 0 0;
+margin: 2% 2% 0 0;
 border: 1px solid #999;
 background-color: rgba(255, 255, 255, 0.47);
 float:left;
+}
+
+.thumbnail:nth-child(3n) {
+	margin: 2% 0 0 ;
 }
 
 .thumbnail .description {
