--- a/www/css/style.css
+++ b/www/css/style.css
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+	min-width: 700px;
 	height: 100%;
 	background: url(/img/hexellence.png) fixed !important;
 }
@@ -539,7 +540,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#004c4646', e
 	height: 100%;
 }
 .slide {
-	line-height:250px;
+	line-height:180px;
 }
 
 .slide > div  h3 {
