--- a/www/css/style.css
+++ b/www/css/style.css
@@ -70,6 +70,9 @@ p, h2, h3 {
 }
 
 textarea {
+	font-family: 'barkentina';
+	font-size: 16px;
+	padding: 10px;
 	resize: none;
 	overflow: hidden;
 	width: 100%;
