--- a/www/templates/index.tpl.html
+++ b/www/templates/index.tpl.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
 	<title>{PAGE_TITLE}</title>
@@ -15,6 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="css/fadeIn.css">
 	<link rel="stylesheet" type="text/css" href="css/bxslider.css">
 	<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+	<script type="text/javascript" src="js/modernizr.custom.72367.js"></script>
 	<script type="text/javascript" src="js/jquery.bxslider.min.js"></script>
 </head>
 <body>
