--- a/www/css/style.css
+++ b/www/css/style.css
@@ -186,17 +186,34 @@ textarea {
 	
 }
 
+.admin-control {
+	background: url(../img/icons/gears_icon.svg) no-repeat center left;
+}
+
+.ittem-control {
+	background: url(../img/icons/market_icon.svg) no-repeat center left;
+}
+
+.personal {
+	background: url(../img/icons/list_icon.svg) no-repeat center left;
+}
+
+.soc-control {
+	background: url(../img/icons/soc_icon.svg) no-repeat center left;
+}
+
 .spoiler-link > h2 {
 	padding: 8px 8px 8px 60px;
-	background: url(../img/instagram.png) no-repeat left center;
 	background-size: contain;
 	font-size: 1.1em;
 	color: 
 }
 
+
+
 .shop-ul li {
 	width: 80%;
-	margin: 8px auto;
+	margin: 12px auto;
 
 }
  
