--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1003,3 +1003,9 @@ position:relative;
 	width: 50px;
 	height: 50px;
 }
+
+.svg_test {
+	border: 1px solid #333;
+	width: 100px;
+	height: 100px;
+}
