--- a/www/css/style.css
+++ b/www/css/style.css
@@ -997,14 +997,12 @@ position:relative;
 .description_icons {
 	position: absolute;
 	left: 0;
-	bottom: 0;
-	top: 0;
-	margin: auto;
+	top: 4px;
 	width: 50px;
 	height: 50px;
 }
 
-.svg_test {
+#svg3 {
 	border: 1px solid #333;
 	width: 100px;
 	height: 100px;
