--- a/www/Test3/css/style.css
+++ b/www/Test3/css/style.css
@@ -23,29 +23,45 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3279c6', end
 
 }
 
+.slide {
+	width: 33.333333%;
+	height: 100%;
+	float: left;
+}
+
 .container {
 	width: 80%;
-	height: 600px;
+	height: 700px;
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	left: 0;
 	right: 0;
 	margin: auto;
+	overflow: hidden;
 }
 
-.counter-cont {
+.slider-cont {
+	width: 300%;
+	height: 100%;
+}
+
+.counter-wrapp {
 	width: 70%;
-	position: relative;
-	background-color: #b0b0b0;
-	height: 14px;
 	margin: 0 auto;
+	padding: 1px;
+
 }
 
 .counter {
+	height: 14px;
+	margin: 0 auto;
 	position: relative;
+}
+.counter-cont {
 	width: 100%;
 	height: 100%;
+	background-color: #b0b0b0;
 }
 
 .old-man {
@@ -73,7 +89,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3279c6', end
 width:44px;
 height:44px;
 position:absolute;
-margin-left: -46px;
+margin-left: -22px;
 top: -100%;
 background: url(../img/roller_white.png) no-repeat center center;
 background-size: contain;
@@ -97,19 +113,37 @@ ul li {
 	float: left;
 	width: 3%;
 	line-height: 30px;
-	margin: 0 1% 10px;
+	margin: 10px 1%;
 	color: white;
 	border-radius: 22%;
 }
 
 ul li:first-child {
-	margin-left: -3.9%;
+	margin-left: -1.5%;
 }
 
 ul li:last-child {
-	margin: 0 0 10px 1%;
+	margin-right: -2.5%;
 }
 
 .active {
 	background-color: red;
+}
+
+.arrow {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 50px;
+	height: 50px;
+	background-color: rgba(0,0,0,0.3);
+	margin: auto;
+}
+
+#arrowLeft {
+	left: 0;
+}
+
+#arrowRight {
+	right: 0;
 }
