--- a/www/css/style.css
+++ b/www/css/style.css
@@ -191,11 +191,13 @@ textarea {
 	color: #4C4646;
 }
 
+.shop-ul {
+	width: 70%;
+}
 
 
 .shop-ul li {
-	width: 80%;
-	margin: 12px auto;
+	margin: 12px 0;
 
 }
  
@@ -997,13 +999,22 @@ position:relative;
 .description_icons {
 	position: absolute;
 	left: 0;
-	top: 0;
-	width: 56px;
-	height: 56px;
+	top: 3px;
+	width: 50px;
+	height: 50px;
 }
 
 .svg_test {
 	border: 1px solid #333;
 	width: 100px;
 	height: 100px;
+}
+
+#mailBuyBox {
+	width: 20%;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0%;
+	margin: auto;
 }
